Split /var/tmp to its own partition
Replace current 15GB /var with 5GB /var and 10GB /var/tmp.

Latter needs to be that large for hosted-engine deployment.

Change-Id: I5d7fa308d4f11151d91d1063cc5c97e137b174be
Bug-Url: https://bugzilla.redhat.com/2055829
Signed-off-by: Yedidyah Bar David <didi@redhat.com>

--- a/src/imgbased/constants.py.in
+++ b/src/imgbased/constants.py.in
@@ -16,10 +16,11 @@ IMGBASED_PERSIST_PATH = IMGBASED_STATE_DIR + "/persisted-rpms/"
 
 IMGBASED_SKIP_VOLUMES_PATH = IMGBASED_STATE_DIR + "/.skip-volumes"
 IMGBASED_MINIMUM_VOLUMES = {"/var":           {"size": "8G", "attach": True}}
-IMGBASED_DEFAULT_VOLUMES = {"/var":           {"size": "15G", "attach": True},
+IMGBASED_DEFAULT_VOLUMES = {"/var":           {"size": "5G", "attach": True},
                             "/var/crash":     {"size": "10G", "attach": True},
                             "/var/log":       {"size": "8G", "attach": True},
                             "/var/log/audit": {"size": "2G", "attach": True},
+                            "/var/tmp":       {"size": "10G", "attach": True},
                             "/home":          {"size": "1G", "attach": True},
                             "/tmp":           {"size": "1G", "attach": False}}
 
