Do not persist ovirt-node-ng-image-update-placeholder
We do not need to persist ovirt-node-ng-image-update-placeholder.noarch,
as this can cause some troubles when upgrading.

Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=2100002
Signed-off-by: Jean-Louis Dupond <jean-louis@dupond.be>

--- a/src/plugin-yum/imgbased-persist.conf
+++ b/src/plugin-yum/imgbased-persist.conf
@@ -1,4 +1,4 @@
 [main]
 enabled=1
-excluded_pkgs=redhat-virtualization-host-image-update,ovirt-node-ng-image-update,rhvm-appliance,ovirt-engine-appliance
+excluded_pkgs=redhat-virtualization-host-image-update,ovirt-node-ng-image-update,ovirt-node-ng-image-update-placeholder,rhvm-appliance,ovirt-engine-appliance
 bootsetup_pkgs=kernel
